# lsqrsolve

./: AUTHORS  ChangeLog  Makefile.am  README  README.md  autogen.sh  configure.ac  lsqrsolve.spec.in
src/: Makefile.am  catch_sig.c  catch_sig.h  export.c  export.h  extern.h  irm.c  irm.h  kernel_density.c  lsqr.c  lsqr.h  lsqr_wrapper.c  lsqr_wrapper.h  matrice.c  matrice.h  options.h  parse_options.c  parse_options.h  prod.c  regul.c  regul.h  relative_tt.c  relative_tt.h  rse.c  rse2.c  rse3.c  tomo.c
